--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // "armeabi-v7a" can adapter most of the devices
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
     }
 
     buildTypes {
